WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225819
REGRESSION (
r277221
): 2 test262 tests failing
https://bugs.webkit.org/show_bug.cgi?id=225819
Summary
REGRESSION (r277221): 2 test262 tests failing
Truitt Savell
Reported
2021-05-14 12:56:45 PDT
FAIL test/built-ins/NativeErrors/AggregateError/order-of-args-evaluation.js (default) Full Output: Exception: Test262Error: Steps in unexpected sequence: '2,3,1' FAIL test/built-ins/NativeErrors/AggregateError/order-of-args-evaluation.js (strict mode) Full Output: Exception: Test262Error: Steps in unexpected sequence: '2,3,1' seeing these failures on
https://build.webkit.org/#/builders/19/builds/2485
from the history this appears to have started with
https://trac.webkit.org/changeset/277221/webkit
Attachments
Patch
(2.63 KB, patch)
2021-05-14 13:37 PDT
,
Ross Kirsling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-05-14 12:57:08 PDT
<
rdar://problem/78029248
>
Ross Kirsling
Comment 2
2021-05-14 13:26:45 PDT
Ahh right, that's why that code had been copy-pasted.
Ross Kirsling
Comment 3
2021-05-14 13:37:20 PDT
Created
attachment 428649
[details]
Patch
EWS
Comment 4
2021-05-14 17:47:41 PDT
Committed
r277524
(
237752@main
): <
https://commits.webkit.org/237752@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 428649
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug