REGRESSION (r277221): 2 test262 tests failing https://bugs.webkit.org/show_bug.cgi?id=225819

Reviewed by Alexey Shvayka.

Undo the other part of r277221's code consolidation --
I'd forgotten that this exists to enforce a evaluation order on AggregateError's arguments.

* runtime/AggregateError.cpp:
(JSC::createAggregateError):


Canonical link: https://commits.webkit.org/237752@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@277524 268f45cc-cd09-0410-ab3c-d52691b4dbfc